Adds resources/omgevingsvergunning.eap

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .vscode/
 *.ldb
 *.xls*
+report_OSLO-Omgevingsvergunning-master.csv
+report_OSLO-Omgevingsvergunning-master.html
+target.zip
+target/
