--- a/config/eap-mapping.json
+++ b/config/eap-mapping.json
@@ -27,6 +27,6 @@
     "contributors-file": "stakeholders.csv",
     "contributors-column": "MijnKolom",
     "feedbackurl": "https://github.com/Informatievlaanderen/OSLOthema-omgevingsvergunning/issues",
-    "standaardregisterurl": "https://data.vlaanderen.be/standaarden/TODO/CORRECT-URL/index.html",
+    "standaardregisterurl": "https://data.vlaanderen.be/standaarden/TODO/CORRECT-URL/index.html"
   }
 ]
