--- a/config/eap-mapping.json
+++ b/config/eap-mapping.json
@@ -23,6 +23,7 @@
     "template": "omgevingsvergunning-voc.j2",
     "title": "OSLO Omgevingsvergunning",
     "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
+    "publication-date": "2024-03-18",
     "license": "https://data.vlaanderen.be/id/licentie/modellicentie-gratis-hergebruik/v1.0",
     "contributors-file": "stakeholders.csv",
     "contributors-column": "Rol",
