--- a/config/eap-mapping.json
+++ b/config/eap-mapping.json
@@ -5,7 +5,7 @@
     "eap": "OSLO-Omgevingsvergunning.eap",
     "diagram": "OSLO-Omgevingsvergunning-master",
     "template": "omgevingsvergunning-ap.j2",
-    "title": "Omgevingsvergunning (Applicatieprofiel)",
+    "title": "OSLO Omgevingsvergunning (Applicatieprofiel)",
     "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
     "publication-date": "2024-03-18",
     "license": "https://data.vlaanderen.be/id/licentie/modellicentie-gratis-hergebruik/v1.0",
