--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 .vscode/
 *.ldb
 *.xls*
+**/local/
+OSLO-Omgevingsvergunning-backup.eap
 report_OSLO-Omgevingsvergunning-master.csv
 report_OSLO-Omgevingsvergunning-master.html
 target.zip
 target/
-**/local/
